--- a/style.css
+++ b/style.css
@@ -14,13 +14,11 @@ body {
      padding: 4rem;
      gap: 3rem;
 }
+
 .cartao {
-    margin: 1rem 1rem;
-    background-color: aqua;
-    height: 20rem;
-    flex-grow: 1;
-    flex-basis: calc(33% -6rem);
+    flex: 1 0 calc(100% - 1rem);
 }
+
 .cartao__conteudo {
     background-color: var(--card-front-color);
     text-align: center;
@@ -50,12 +48,13 @@ body {
 .cartao:hover .cartao__conteudo {
     transform: rotateY(180deg);
 }
-.cartao__conteudo__pergunta,
-.cartao__conteudo__resposta {
+.cartao_conteudo_pergunta,
+.cartao_conteudo_resposta {
     backface-visibility: hidden;
     position: absolute;
     height: 100%;
     width: 100%;
+    box-sizing: border-box;
 }
 .cartao__conteudo__resposta {
     transform: rotateY(180deg);
@@ -64,6 +63,12 @@ body {
     margin-top: 1rem;
     padding: 2rem;
     margin-top: 4rem;
+    font-size: 1.4vw;
+}
+.cartao__conteudo__resposta{
+    transform: rotateY(180deg);
+    background-color: rgba(0, 244, 191, 0.2);
+    border: 4px solid var(--card-back-color);
 }
 footer {
     background-color: black;
@@ -77,4 +82,16 @@ footer p{
     font-size: 0.6rem;
     height:2rem;
     margin-top: 0,5rem;
+}
+@media (max-width: 560 px) {
+
+    body {
+        background: url('img/bd-mobile.webp');
+    }
+    .cartao__conteudo h3 {
+        font-size: 3vw;
+    }
+    .cartao__conteudo p {
+        font-size: 3.8vw;
+    }
 }
